<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.developers.allefsousa.testandroid.Ui.MainActivity">

    <EditText
        android:id="@+id/editusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="Usuario"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editsenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="Senha"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editusuario"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:text="Logar"
        app:layout_constraintTop_toBottomOf="@+id/editsenha"
        tools:layout_editor_absoluteX="123dp" />
</android.support.constraint.ConstraintLayout>
